--- a/app/views/vitamins/index.html.erb
+++ b/app/views/vitamins/index.html.erb
@@ -4,29 +4,11 @@
 <div class="vitamins">
   <% for vitamin in @vitamins %>
     <div class="youtube">
-      <%= link_to vitamin.name, vitamin.video_url, :class => "video" %>
+      <span class="thumb"><%= vitamin.video_url %></span>
+      <%= link_to vitamin.name, vitamin, :class => "video" %>
     </div>
   <% end %>
 </div>
 
-
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Video Url</th>
-    <th>Description</th>
-  </tr>
-  <% for vitamin in @vitamins %>
-    <tr>
-      <td><%= vitamin.name %></td>
-      <td><%= vitamin.video_url %></td>
-      <td><%= vitamin.description %></td>
-      <td><%= link_to "Show", vitamin %></td>
-      <td><%= link_to "Edit", edit_vitamin_path(vitamin) %></td>
-      <td><%= link_to "Destroy", vitamin, :confirm => 'Are you sure?', :method => :delete %></td>
-    </tr>
-  <% end %>
-</table>
 
 <p><%= link_to "New Vitamin", new_vitamin_path %></p>
