Link to vitamins and not a static page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
 		<li class ="separator">|</li>
         <li><%= link_to "El Trueque", books_path %></li>
 		<li class ="separator">|</li>
-        <li><%= link_to "Vitamina L", static_path("vitamina-l") %></li>
+        <li><%= link_to "Vitamina L", vitamins_path %></li>
         <li class ="separator">|</li>
 		<li><%= link_to "Club de Lectores", "#" %></li>
         <li class ="separator">|</li>
