--- a/app/views/books/_book_small.html.erb
+++ b/app/views/books/_book_small.html.erb
@@ -1,7 +1,6 @@
 <div class="book left">
   <div class="cover"><%= link_to image_tag(book_small.photo.url), book_small %></div>
   <div class="info">
-    <p><%= book_small.title %></p>
-    <p><%= link_to "Ver Libro", book_small, :class => "view-more" %></p>
+    <p><%= link_to book_small.title, book_small, :class => "view-more" %></p>
   </div>
 </div>
