--- a/app/views/vitamins/index.html.erb
+++ b/app/views/vitamins/index.html.erb
@@ -1,12 +1,19 @@
 <% title "Vitamins" %>
 
+<h1>Vitamina L</h1>
+
 
 <div class="vitamins">
   <% for vitamin in @vitamins %>
+    
     <div class="youtube">
-      <span class="thumb"><%= vitamin.video_url %></span>
+      
+      <h3><%= link_to vitamin.name, vitamin %></h3>
+      
+      <span class="url"><%= vitamin.video_url %></span>
       <%= link_to vitamin.name, vitamin, :class => "video" %>
     </div>
+    
   <% end %>
 </div>
 
