Styling, make that niggaz float

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -332,7 +332,7 @@ a.view-more:hover {text-decoration: underline;}
 
 
 
-.youtube { width: 200px; min-height: 180px; text-align: center;}
+.youtube { float: left; margin: 5px; width: 200px; min-height: 180px; text-align: center;}
 .youtube h3 {margin: 5px auto; text-align: center;}
 .youtube img {text-align: center;}
 .youtube span.url { display: none; }
