--- a/app/views/vitamins/index.html.erb
+++ b/app/views/vitamins/index.html.erb
@@ -1,7 +1,14 @@
 <% title "Vitamins" %>
 
-<h1>Vitamina L</h1>
+<h1>Video Destacado</h1>
 
+<h3><%= @featured_vitamin.name %></h3>
+
+<%= raw @featured_vitamin.small_embed_code %>
+
+
+
+<h1>Otros Videos</h1>
 
 <div class="vitamins">
   <% for vitamin in @vitamins %>
@@ -15,6 +22,8 @@
     </div>
     
   <% end %>
+  
+  <%= clear %>
 </div>
 
 
