--- a/app/views/navigation/site_index.html.erb
+++ b/app/views/navigation/site_index.html.erb
@@ -11,7 +11,7 @@
   <div id="login" class="right">
     <div class = "quoted-title" id="login-title">
       <% if current_user %>
-        Bienvenido!
+        Este es mi perfil en el trueque electrónico
       <% else %>
         Acceso usuarios
       <% end %>
@@ -25,10 +25,11 @@
         
         <div class="leftr">
           <ul>
-            <li><%= link_to "Mi Perfil", current_user %></li>
-            <li><%= link_to "Mis libros", user_books_path(current_user) %></li>
+            <li><%= link_to "Ver mi perfil completo", current_user %></li>
+            <li><%= link_to "Ir a mis libros", user_books_path(current_user) %></li>
+			<li><%= link_to "Cerrar sesión", logout_path, :class => "small" %></li>
           </ul>
-          <%= link_to "Cerrar sesión", logout_path, :class => "small" %>
+          
         </div>
         
         
