current user fixed

--- a/app/views/navigation/site_index.html.erb
+++ b/app/views/navigation/site_index.html.erb
@@ -11,7 +11,7 @@
   <div id="login" class="right">
     <div class = "quoted-title" id="login-title">
       <% if current_user %>
-		<%= curret_user.name %>
+		<%= current_user.name %>
       <% else %>
         Acceso usuarios
       <% end %>
