--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,7 +3,7 @@
     <p><%= link_to comment.user.name, comment.user %></p>
     <p><%= link_to image_tag(comment.user.avatar.url(:small)), comment.user%></p>
     <p>
-      <strong>Creado el <%= comment.created_at.strftime("%D") %></strong>
+      <strong>Creado el <%= time_ago_in_words(comment.created_at) %></strong>
     </p>
   </div>
   
