--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -163,6 +163,17 @@ h1{color: #1F4A57;}
 
 /* ######################################## INDEX STYLES */
 
+div#login_form_home label{
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-size:14px;
+  color:#FFF;
+}
+div#login_form_sidebar label{
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-size:14px;
+  color:#8c8c8c;
+}
+
 #login{
   width: 280px; float: right; height: 270px;
   background: #C7B472 url(/images/layout/backlogin.jpg) bottom left no-repeat;
@@ -219,7 +230,9 @@ label{
   font-size: 13px;
 }
 
-#sidebar {float: left; width: 225px;}
+#sidebar {float: left; width: 225px;
+  background-color:#E9E9E9;
+  }
 #footer {height: 150px; background: #F2F2F2; width: 100%; border: 1px solid #CCC; border-left: 0px; border-right: 0px; margin-bottom: 30px;}
 #footer .section {width: 310px; }
 #footer .section h3 {color: #1F4A57; font-family: Georgia; font-weight: normal; font-size: 18px;}
