--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -334,6 +334,9 @@ a.view-more:hover {text-decoration: underline;}
 
 
 
+
+/* ######################################## VITAMINS HOME */
+.vitamins {text-align: center; width: 630px; margin: 0 auto;}
 .youtube { float: left; margin: 5px; width: 200px; min-height: 180px; text-align: center;}
 .youtube h3 {margin: 5px auto; text-align: center;}
 .youtube img {text-align: center;}
