--- a/app/views/comments/_list_and_form.html.erb
+++ b/app/views/comments/_list_and_form.html.erb
@@ -4,7 +4,7 @@
   <% if commentable.comments.any? %>
     <%= render commentable.comments %>
   <% else %>
-    <%= raw("<p>No hay comentarios. Podrías ser el primero en comentar!</p>") if current_user %>
+    <p>No hay comentarios. Podrías ser el primero en comentar!</p>
   <% end %>
 
   <%= clear %>
