Small user partial for sidebar and login-part at site_index

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -230,10 +230,8 @@ label{
   font-size: 13px;
 }
 
-#sidebar {float: left; width: 225px;
-  background-color:#E9E9E9;
-  }
-#footer {height: 150px; background: #F2F2F2; width: 100%; border: 1px solid #CCC; border-left: 0px; border-right: 0px; margin-bottom: 30px;}
+#sidebar { float: left; width: 225px; background-color:#E9E9E9; }
+#footer  { height: 150px; background: #F2F2F2; width: 100%; border: 1px solid #CCC; border-left: 0px; border-right: 0px; margin-bottom: 30px; }
 #footer .section {width: 310px; }
 #footer .section h3 {color: #1F4A57; font-family: Georgia; font-weight: normal; font-size: 18px;}
 
@@ -355,3 +353,9 @@ a.view-more:hover {text-decoration: underline;}
 .youtube img {text-align: center;}
 .youtube span.url { display: none; }
 .youtube .thumb { width: 200px; height: 150px; }
+
+
+/* ######################################## SMALL PROFILE (Sidebar profile) STYLES */
+.small-profile                    { min-width: 200px; margin: 0 auto; }
+.small-profile div#avatar         { width: 100px; margin: 0 auto; text-align: center; margin-bottom: 15px;}
+.small-profile div#login_list     { width: 100%; margin-bottom: 15px; text-align: center;}
