--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -10,18 +10,8 @@
   
   <div id="perfil" style="width: 90%">
     <% if current_user %>
-      <div class="left">
-        <%= image_tag current_user.avatar.url(:small) %>
-      </div>
-
-      <div class="leftr" id="login_list">
-        <ul>
-          <li><%= link_to "Ver mi perfil completo", current_user %></li>
-          <li><%= link_to "Ir a mis libros", user_books_path(current_user) %></li>
-          <li><%= link_to "Cerrar sesión", logout_path %></li>
-        </ul>
-
-      </div>
+      <%= render :partial => "users/small", :object => current_user, :as => :user %>
+      
     <% else %>
       <%= render :partial => "user_sessions/small" %>
     <% end %>
