Added a link to the profile to the small user partial

--- a/app/views/users/_small.html.erb
+++ b/app/views/users/_small.html.erb
@@ -5,6 +5,8 @@
 
   <div id="login_list">
     
+    <span><%= link_to "Mi pefil", user %></span>
+     | 
     <span><%= link_to "Mis libros", user_books_path(user) %></span>
      | 
     <span><%= link_to "Cerrar sesión", logout_path %></span>
