--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,5 +28,11 @@
     <%= f.label :actual_book %><br />
     <%= f.text_field :actual_book %>
   </p>
+  
+  <p>
+    <%= f.label :webpage %><br />
+    <%= f.text_field :webpage %>
+  </p>
+  
   <p><%= f.submit %></p>
 <% end %>
