--- a/app/views/comments/_small_create.html.erb
+++ b/app/views/comments/_small_create.html.erb
@@ -1,14 +1,14 @@
-<% if current_user %>
-  <div class="create-comment">
+<% if can? :create, Comment %>
+  <div id="create-comment">
     <%= form_for [commentable, Comment.new] do |f| %>
       <p>
-        <strong>Comentario</strong> <br />
-        <%= f.text_area :comment %>
+        <strong>Crea tu comentario</strong> <br />
+        <%= f.text_area :comment, :size => "70x5" %>
       </p>
     
       <p><%= f.submit %></p>
     <% end %>
   </div>
 <% else %>
-  <p>Debes iniciar sesión para poder comentar</p>
+  <p>Debes iniciar sesión para poder agregar un comentario.</p>
 <% end %>
