--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,9 @@
 
 <div class="rleft">
   <h2><%= @user.name %></h2>
-  <span class="small"> &lt; <%= @user.webpage %> &gt; </span>
+  <% if @user.webpage? %>
+    <span class="small"> &lt; <%= @user.webpage %> &gt; </span>
+  <% end %>
 </div>
 
 <%= clear %>
