--- a/app/views/books/_book_small.html.erb
+++ b/app/views/books/_book_small.html.erb
@@ -1,5 +1,7 @@
 <div class="book left">
-  <div class="cover"><%= link_to image_tag(book_small.photo.url), book_small %></div>
+  <div class="cover">
+    <%= modal_to image_tag(book_small.photo.url), book_path(book_small, :format => "modal") %>
+  </div>
   <div class="info">
     <p><%= link_to book_small.title, book_small, :class => "view-more" %></p>
   </div>
