--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,7 +123,9 @@
 
 
   <div class="overlay" id="overlay">
-    <div class="contentWrap"></div>
+    <div class="slider"><%= image_tag 'ajax-loader.gif' %></div>
+    <div class="contentWrap"> </div>
+    
   </div>
   
   <!-- Powered by Zinergia -->
