--- a/app/views/books/show.modal.erb
+++ b/app/views/books/show.modal.erb
@@ -17,9 +17,9 @@
   
   <div class="rleft info">
     <h3>Autor</h3>
-    <p>
-      <%= @book.isbn %>
-    </p>
+    <h1>
+      <%= @book.author_names %>
+    </h1>
     
     
     <h3>Sinopsis</h3>
@@ -29,9 +29,9 @@
     
     
     <h3>Estado físico del libro</h3>
-    <p>
+    <h1>
       <%= @book.health_status %>%
-    </p>
+    </h1>
   </div>
   
   <%= clear %>
