--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -291,6 +291,7 @@ label{
 .book-modal .info {width: 470px;}
 .book-modal p {margin: 0; padding: 0;}
 .book-modal h3 {font-weight: bold; margin-bottom: 0px;}
+.book-modal h1 {margin: 2px 0;}
 .book-modal .left {text-align: center;}
 
 
