Show the trade button only if you can actually trade the book!

--- a/app/views/books/show.modal.erb
+++ b/app/views/books/show.modal.erb
@@ -6,11 +6,13 @@
     <% if @book.traded? %>
       <p>
         Libro no disponible.
-      </p>
+      </p>      
     <% elsif current_user && current_user.id != @book.user_id %>
-      <p>
-        <%= trade_link(@book) %>
-      </p>
+      <% if can? :trade, @book %>
+        <p>
+          <%= trade_link(@book) %>
+        </p>
+      <% end %>
     <% end %>
     
   </div>
