--- a/app/views/books/show.modal.erb
+++ b/app/views/books/show.modal.erb
@@ -10,7 +10,7 @@
     <% elsif current_user && current_user.id != @book.user_id %>
       <% if can? :trade, @book %>
         <p>
-          <%= trade_link(@book) %>
+          <%= trade_link(@book) if @book.user != current_user %>
         </p>
       <% end %>
     <% end %>
